Story 5: Fixed bug where clicking delete/edit would collapse the card.

--- a/frontend/src/app/component/horse/horse-list/horse-list.component.scss
+++ b/frontend/src/app/component/horse/horse-list/horse-list.component.scss
@@ -1,3 +1,7 @@
-.btn{
-  margin: 5px;
+.btn-outline-danger{
+  margin-right: 10px;
+  margin-bottom: 3px;
+}
+.btn-outline-info{
+  margin-top: 2px;
 }
